# //switchutils/BUILD.bazel

# Copyright 2024 Intel Corporation
# SPDX-License-Identifier: Apache-2.0

load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "switch_log",
    hdrs = ["switch_log.h"],
    deps = [
        "@target_sys//:target_sys",
    ],
)

cc_library(
    name = "switch_utils",
    hdrs = ["switch_utils.h"],
)
